# MarchingCube

./: .gitignore  CMakeLists.txt  README.MD
doc/: coding.pptx
example/: CMakeLists.txt  MarchingCube.cpp  VolumeRender.cpp
include/MarchingCubes/: isosurface.hpp  volume.hpp
include/MarchingSquares/: image.hpp  isoline.hpp
include/Render/: camera.hpp  line_render.hpp  shader_program.hpp  surface_render.hpp  transfer_function.h  volume_render.hpp
include/Utils/: common.hpp  edge.hpp  lookup_table.hpp  point.hpp  tool.hpp  triangle.hpp  volume_reader.hpp
src/: CMakeLists.txt  image.cpp  render.cpp  shaders.hpp  shaders.hpp.in  volume.cpp
src/shader/: phone_shading_f.glsl  phone_shading_v.glsl  raycast_pos_f.glsl  raycast_pos_v.glsl  raycasting_f.glsl
test/: CMakeLists.txt  test_marching_cubes.cpp  test_marching_squares.cpp  test_volume_render.cpp
